Tests and making the app work at all.